delete user from db

--- a/templates/home.tmpl
+++ b/templates/home.tmpl
@@ -16,7 +16,9 @@
                             <td>{{ .Id }}</td>
                             <td>{{ .Name }}</td>
                             <td>{{ .Email }}</td>
-                            <td>Edit | Delete</td>
+                            <td>Edit {{ .Id }} | 
+                                <a name="" id="" class="btn btn-danger" href="/delete?id={{.Id}}" role="button">Delete<a/>
+                            </td>
                         </tr>
                     {{ end }}
                 </tbody>
