--- a/templates/home.tmpl
+++ b/templates/home.tmpl
@@ -16,7 +16,7 @@
                             <td>{{ .Id }}</td>
                             <td>{{ .Name }}</td>
                             <td>{{ .Email }}</td>
-                            <td>Edit {{ .Id }} | 
+                            <td><a name="" id="" class="btn btn-warning" href="/edit?id={{.Id}}" role="button">Edit<a/> | 
                                 <a name="" id="" class="btn btn-danger" href="/delete?id={{.Id}}" role="button">Delete<a/>
                             </td>
                         </tr>
